supplements/static/pls/css/pls.css
.loader {
  background: url(/static/loader.gif) no-repeat center center;
  z-index: 1;
  width: 32px;
  height: 32px;
  margin: 8px 0 0 32px;
}

#canvas {
  display: none;
}

.product-imitation.pls {
  padding: 0;
}

.product-imitation img,
.image-imitation img {
  width: 100%;
}

.image-imitation {
  background-color: #f8f8f9;
  text-align: center;
}

.product-image {
  width: 55px;
  height: 55px;
}

.product-cell {
  line-height: 55px !important;
}

/*Slick Carousel */
.slick-prev:before,
.slick-next:before {
  color: #79aa63 !important;
}

.image-wrapper {
  padding-right: 10px;
  padding-left: 10px;
}

.custom-file {
  position: relative;
  width: 70%;
  height: calc(2.25rem + 2px);
  margin-bottom: 0;
}

.custom-file-input {
  position: relative;
  z-index: 2;
  width: 70%;
  height: calc(2.25rem + 2px);
  margin: 0;
  margin-top: 10px;
  opacity: 0;
}

.custom-file-label {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1;
  padding: .5rem .75rem;
  line-height: 1.5;
  color: #495057;
  background-color: #fff;
  border: 1px solid #ced4da;
  border-radius: .25rem;
  font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 13px;
  font-weight: 400;
}

.custom-file-label::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  z-index: 3;
  display: block;
  padding: .5rem .75rem;
  line-height: 1.5;
  color: #495057;
  content: "Browse";
  background-color: #e9ecef;
  border-left: 1px solid #ced4da;
  border-radius: 0 .25rem .25rem 0;
}

.label-detail {
  width: 100% !important;
}

.label-detail .custom-file-input {
  width: 100% !important;
  margin-top: 0 !important;
}

.label-info-box {
  margin-top: 20px;
  background-color: #ccc;
}

.panel.panel-info.label-banner {
  border-color: #93c47d;
}

.panel-info>.panel-heading.label-banner {
  border-color: #93c47d;
  background-color: #93c47d;
}

.btn-primary.disabled {
  background-color: #aaa;
  border-color: #aaa;
}

.supplement-count {
  margin-top: 15px;
  margin-bottom: 15px;
}

.label-title {
  margin-top: 15px;
}

.label-count {
  margin-top: 60px;
  margin-bottom: 30px;
}

.label-detail .ibox-content img {
  width: 100%;
}

.float-right {
  float: right;
}

.feed-element .well {
  background-color: #fff;
}

.label-comment-action {
  padding-right: 15px;
}

#product-template {
  margin-top: 0;
}

#product-thumbnail {
  margin-top: 5px;
}

#product-buttons {
  margin-top: 20px;
}

#payout-add {
  font-size: 20px;
}

#print-message {
  margin-left: 20px;
  font-family: "open sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 13px;
  font-weight: 400;
}

.payout-success {
  border: 1px solid green !important;
}

.payout-error {
  border: 1px solid red !important;
}

.editable-column-wrapper {
  width: 70px;
}

.editable-column-wrapper .editable-column {
  border: 1px solid gray;
  border-radius: .25rem;
  padding: 2px 4px;
  width: 100%;
}

#edit-column {
  text-decoration: underline;
  cursor: pointer;
  font-weight: bold;
}

.extra-margin {
  margin-top: 8px;
}

.tile-label {
  position: absolute;
  right: 0;
  top: 20px;
  margin: 0 10px 0 0;
}

.customSelect {
  position: relative;
}

.customSelect select {
  -webkit-appearance: none;
  -moz-appearance: none;
}

.customSelect:after {
  content: '\f0d7';
  top: 0;
  height: 33px;
  padding: 9px 0px 0px 15px;
  border-left: 1px solid #e5e6e7;
  position: absolute;
  font-family: FontAwesome;
  right: 18px;
  cursor: pointer;
  pointer-events: none;
}

.delete-product-btn {
  position: absolute;
  top: 5px;
  right: 20px;
  background-color: #cc6666;
  border: none;
}

.bg-private {
  background-color: #fcf8e3 !important;
}

#private-note {
  display: flex;
  width: fit-content;
  line-height: 2rem;
  cursor: pointer;
}

.truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.hidden {
  visibility: hidden;
}

.modal-preview {
  border: 1px solid #bfc0c1;
  /*display: flex;*/
  align-items: center;
  justify-content: center;
  border-radius: inherit;
}

#mockup-editor .mockup-canvas {
  position: absolute;
  cursor: grab;
}

#mockup-editor .btn-group {
  margin: 5px 0;
  display: block;
  float: left;
  clear: left;
}

#mockup-editor .btn-group:last-child {
  margin-bottom: 0;
}

#mockup-editor .btn-group.hidden {
  margin: 0;
}

.img-select {
  font-size: 0.8em;
  text-align: left;
  user-select: none;
  -webkit-user-drag: none;
}

.img-select-opt {
  cursor: pointer;
}

.previews {
  text-align: center;
  margin-left: -10px;
}

.preview-text {
  text-align: center;
}

#mockup-editor {
  display: flex;
  justify-content: space-between;
}

#mockup-editor > div {
  position: relative;
}

#mockup-editor .zoom-slider {
  margin-top: 2px;
  float: left;
}

#mockup-editor .ui-slider-vertical {
  height: 394px;
}

#mockup-editor .ui-slider-vertical .ui-slider-handle {
  margin-left: 2px;
}

#mockup-editor .canvas-group {
  border: 1px solid #bfc0c1;
  position: relative;
  height: 400px;
  width: 420px;
  margin-left: 20px;
  padding: 0px 10px;
}

#save-mockup {
  position: absolute;
  bottom: 5px;
  right: 5px;
}

.mockup-img {
  width: 95%;
  position: relative;
  top: -17px;
  cursor: pointer;
  -webkit-user-drag: none;
}

.mockup-item {
  height: 120px;
  width: 120px;
  border: 1px solid #bfc0c1;
  margin: 10px 0 0 10px;
  float: left;
}

.mockup-select {
  position: relative;
  left: 39px;
  z-index: 1;
}

.mockup-save {
  text-align: right;
  display: flex;
  flex-direction: row-reverse;
}

.mockup-save .progress {
  display: none;
  width: 100%;
  margin: 8px 20px 0 0;
}

.mockup-save .progress-bar.clone {
  display: none;
}
#modal-mockup-images .modal-content .sk-spinner {
  display: none;
  position: absolute;
  top: 40%;
  left: 0;
  right: 0;
  z-index: 2000;
}
#modal-mockup-images .modal-content.loading .sk-spinner {
  display: block;
}

#modal-mockup-images .modal-content.loading .modal-body:after {
    content: '';
    background-color: rgba(255, 255, 255, 0.7);
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 2000;
}

.flex {
  display: flex;
}

#mockup-thumbnails {
  margin: 0 0 15px;
}

#mockup-thumbnails:empty {
  display: none;
}

#mockup-thumbnails:before {
  content: "New Mockups:";
}

#mockup-thumbnails img {
  max-width: 70px;
  padding: 0 15px;
}

/* adding bootstrap 3 media query */
@media(min-width:992px) {
  .padding-zero-left {
    padding-left: 0px;
  }
  .padding-zero-right {
    padding-right: 0px;
  }
}

.comment-history {
  max-height: 550px;
  overflow: auto;
}

